# python-template

./: .gitignore  Makefile  README.md  main.py  notebook.ipynb  pyproject.toml
modules/: add_test.py
python_project_template/: __main__.py
tests/modules/: test_add.py
