[tool.poetry]
name = "python-project-template"
version = "0.1.0"
description = ""
authors = ["Ut0n69 <28569773+Ut0n69@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "python_project_template"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.1.0"
isort = "^5.12.0"
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
